mobile acrescentado